Fix exclude facet visibility
Commit d0cb2e3 introduced a bug wherein the exclude facets were not
appearing on hover/focus.

--- a/scss/components/search/_facet.scss
+++ b/scss/components/search/_facet.scss
@@ -47,8 +47,12 @@ prm-facet-range {
 }
 
 // Don't show the exclude facet icons in the medium breakpoint
-@media (min-width:960px) {
-  .available-facets .section-content .md-chips .md-chip .button-exclude {
+@media (min-width: 960px) {
+  .available-facets
+    .section-content
+    .md-chips
+    .md-chip:not(:hover)
+    .button-exclude:not(:focus) {
     opacity: 0 !important;
   }
 }
